# MyHanout

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  PRE-PUBLIC-CLEANUP.md  README.md  SECURITY.md  docker-compose.data.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_invoice_review.py  0003_daily_entry_mlops_order_modes.py  0003_multitenant.py  0004_conversation.py  0005_tenant_phase2.py  0006_agent_memory.py  0007_document_chunk_tenant.py  0008_customers_promos.py  0009_invoice_paid.py  0010_promo_visual.py  0021_haccp.py  (+18 more)
backend/app/: __init__.py  config.py  main.py
backend/tests/: conftest.py  test_agents.py  test_agents_memory_eval.py  test_auth.py  test_backtest.py  test_briefing.py  test_butchery.py  test_catalog_management.py  test_connectors.py  test_connectors_config.py  test_controls.py  test_daily_mlops.py  test_data_platform.py  test_demo_pack.py  test_email_import.py  test_finance.py  test_forecasting.py  test_forecasting_signals.py  test_forecasts.py  test_haccp.py  test_hardening.py  test_health.py  test_impact.py  test_import_dwh.py  test_ingestion.py  test_integration_pg.py  test_integrations.py  test_invoices.py  test_invoices_review.py  test_loyalty.py  test_markdown.py  test_model_registry.py  test_ocr_mistral.py  test_omni_access.py  test_onboarding.py  test_orders_suggest.py  test_payables.py  test_platform.py  test_pricing_staffing.py  test_production.py  (+14 more)
(+441 files in other folders)
