[project]
name = "myhanout-backend"
version = "0.1.0"
description = "MyHanout AI — copilot IA pour commerces de proximité (backend)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "greenlet>=3.0",
    "celery>=5.4",
    "redis>=5.0",
    "structlog>=24.4",
    "prometheus-client>=0.20",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "pgvector>=0.3",
    "passlib[bcrypt]>=1.7",
    "python-jose[cryptography]>=3.3",
    "pandas>=2.2",
    "numpy>=1.26",
    "pypdf>=4.3",
]

[project.optional-dependencies]
# Dépendances lourdes / optionnelles : forecasting avancé.
forecasting = ["prophet>=1.1", "lightgbm>=4.5", "holidays>=0.57"]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "black>=24.8",
    "mypy>=1.11",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
